# kernel

./: Cargo.toml  README.md
common/interface/: Cargo.toml
common/interface/src/: address.rs  contract.rs  lib.rs  raw_transaction.rs  transaction.rs
contracts/hello-world/: Cargo.toml
contracts/hello-world/src/: lib.rs
contracts/hello-world/tests/: executes.rs
contracts/wallet/: Cargo.toml  build.rs
contracts/wallet/src/: lib.rs  main.rs  main.wasm
contracts/wallet/tests/: executes.rs
contracts/wallet/wrapper/: Cargo.toml  build.rs
contracts/wallet/wrapper/src/: lib.rs
contracts/wallet/wrapper/tests/: executes.rs
core/: Cargo.toml
core/src/: error.rs  host.rs  main.rs  process.rs
core/src/state/: mod.rs  oof.rs
ee/src/state/: mod.rs  oof.rs
engine/: Cargo.toml  build.rs
engine/src/: lib.rs
kernel/: Cargo.toml
kernel/src/: address.rs  main.rs  process.rs  transaction.rs
kernel/src/state/: mod.rs
src/: error.rs  lib.rs  process.rs  transaction.rs
src/state/: mock.rs  mod.rs  oof.rs
