[package]
name = "core"
version = "0.1.0"
authors = ["Matt Garnett <matt.garnett@me.com>"]
edition = "2018"

[dependencies]
arrayref = "0.3.5"
bonsai = { version = "0.2.0", default-features = false, features = ["u128"] }
interface = { path = "../common/interface", features = ["wasm"]  }
oof = { path = "../../oof" }
