[package]
name = "engine"
version = "0.1.0"
authors = ["Matt Garnett <matt.garnett@me.com>"]
edition = "2018"

[dependencies]
arborist = { path = "../../arborist" }
bonsai = { version = "0.2.0", default-features = false, features = ["u128"] }
ewasm = { version = "0.2.3", features = ["extra-pages"] }
interface = { path = "../common/interface" }
oof = { path = "../../oof", features = ["generate"] }
