[package]
name = "hello-world"
version = "0.0.0"
authors = ["Matt Garnett <matt.garnett@me.com>"]
edition = "2018"

[dependencies]
arborist = { path = "../../../arborist" }
bonsai = { version = "0.2.0", default-features = false, features = ["u128"] }
interface = { path = "../../common/interface", features = [] }
oof = { path = "../../../oof" }
wabt = "0.9.2"

[dev-dependencies]
arrayref = "0.3.5"
ewasm = "0.2.3"
engine = { path = "../../engine" }
oof = { path = "../../../oof" }

