[package]
name = "wallet"
version = "0.0.0"
authors = ["Matt Garnett <matt.garnett@me.com>"]
edition = "2018"
build = "build.rs"
autobins = false

[dependencies]
bonsai = { version = "0.2.0", default-features = false, features = ["u128"] }
interface = { path = "../../../common/interface" }

[dev-dependencies]
arrayref = "0.3.5"
ewasm = "0.2.3"
engine = { path = "../../../engine" }
